<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/settings"
		android:icon="@drawable/settings_icon"
		android:title="@string/settings_label">		
		<menu>
			<item android:id="@+id/settings_comm"
				android:title="@string/settings_comm_label" />			
			<item android:id="@+id/settings_audio"
				android:title="@string/settings_audio_label" />
			<item android:id="@+id/settings_reset_all"
				android:title="@string/settings_reset_all_label" />				
		</menu>		
	</item>
	<item android:id="@+id/send"
		    android:icon="@drawable/send"
		android:title="@string/send_label">
	  </item>
	<item android:id="@+id/searchAudio"
		  android:icon="@drawable/icon"
		  android:title="@string/search_label">
	</item>
	
	<item android:id="@+id/googlemap"
		  android:icon="@drawable/common_signin_btn_icon_light"
	      android:title="@string/googlemap_label">
	</item>
	<item android:id="@+id/baidumap"
		  android:icon="@drawable/baidumap"
	      android:title="@string/baidumap_label">
	</item>
	<item android:id="@+id/quit"
		android:icon="@drawable/quit_icon"
		android:title="@string/quit_label">
	</item>
   
</menu>
